--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ span.x4:before, i.x4:before
 
 header .container-fluid
 {
-    background-image: url('https://million-wallpapers.ru/wallpapers/2/87/492561881628671/chernyj-fon-kozhi.jpg');
+    background-image: url('http://www.solidbackgrounds.com/images/2048x2048/2048x2048-dark-blue-solid-color-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -109,7 +109,7 @@ header .container-fluid
 
 .number .container-fluid
 {
-    background-image: url('https://million-wallpapers.ru/wallpapers/2/87/492561881628671/chernyj-fon-kozhi.jpg');
+    background-image: url('http://www.solidbackgrounds.com/images/2048x2048/2048x2048-dark-blue-solid-color-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -149,7 +149,7 @@ header .container-fluid
 
 .story .container-fluid
 {
-    background-image: url('https://million-wallpapers.ru/wallpapers/2/87/492561881628671/chernyj-fon-kozhi.jpg');
+    background-image: url('http://www.solidbackgrounds.com/images/2048x2048/2048x2048-dark-blue-solid-color-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -167,7 +167,7 @@ header .container-fluid
       rgba(33, 37, 43, 0.6)
     ),
 
-    url('https://million-wallpapers.ru/wallpapers/2/87/492561881628671/chernyj-fon-kozhi.jpg');
+    url('http://www.solidbackgrounds.com/images/2048x2048/2048x2048-dark-blue-solid-color-background.jpg');
 }
 
 .prefooter h1,
